<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knapsack</string>
    <string name="title_activity_viewer">ViewerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="read"></string>
    <string name="unread">New</string>
    <string name="notification_title">Archiving Page</string>
    <string name="notification_text">Archiving - %s</string>
    <string name="archived">Page Archived</string>
    <string name="archive_error">Error Archiving Page</string>
    <string name="archiving">Archving Page</string>
    <string name="setup_sync">Setup Sync</string>
    <string name="sync">Sync</string>
    <string name="prefs">Settings</string>
    <string name="not_set">Sync not setup</string>
    <string name="more_by_author">Other apps by Quuux Software</string>
    <string name="about">Knapsack</string>
    <string name="version">version 1.0</string>
    <string name="pref_sync">Chrome Browser Sync</string>
    <string name="pref_about">About</string>
    <string name="signed_in">Signed into sync</string>
    <string name="sign_in">Sign in to sync</string>
    <string name="no_network">Network is not available</string>

    <string name="nag_title">Welcome to Knapsack</string>
    <string name="nag_text">
        <![CDATA[
        <p>
            Development of Knapsack is made possible through the support of <b>viewers like you!</b>
        </p>
        <p>
            By <b>purchasing Knapsack</b>, you will receive the <b>full Knapsack experience!</b>
        </p>
        <p>
            &#8226; <em>All nagging will be removed!</em><br/>
            &#8226; <em>Cloud Sync across devices!</em><br/>
            &#8226; <em>Access to premium and beta features!</em>
        </p>
        ]]>
    </string>

    <string name="purchase_call_to_action">Buy now</string>
    <string name="nag_thank_you">Thank you for installing Knapsack!</string>
    <string name="delete_page_title">Delete Page</string>
    <string name="delete_page_message">Are you sure you want to delete this page from your knapsack</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="archive_page_title">Archive Page</string>
    <string name="archive_page_message">This page has been added to your knapsack but not archived successfully. Would you like to archive this page now?</string>
    <string name="archive">Archive</string>
    <string name="pref_wifi_only">Only archive while connected to a WiFi network</string>

    <string-array name="more">
        <item>Open</item>
        <item>Refresh</item>
        <item>Delete</item>
    </string-array>

</resources>
